# System_Monitor

./: README.md
system-monitor/: CMakeLists.txt  LICENSE
system-monitor/src/: main.cpp
